<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/ic_home"
    android:icon="@drawable/ic_home"
    android:title="Home"
    />
    <item
        android:id="@+id/ic_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="Bookmark"/>
    <item
        android:id="@+id/ic_account"
        android:icon="@drawable/ic__person"
        android:title="Account"/>
</menu>