<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="HomeFragmentViewModel"
            type="com.example.noteasap.ui.fragments.homeFragment.HomeFragmetViewModel" />
    </data>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.fragments.homeFragment.HomeBlankFragment"
    android:orientation="vertical"
    android:background="@drawable/mybutton"
    android:gravity="top"
    android:padding="20dp">
<AutoCompleteTextView
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:background="@drawable/shapeemail"
    android:text="@{HomeFragmentViewModel.attemptText}"
    android:layout_height="40dp"
    android:lines="1"
    android:textColorHint="@color/gray"
    android:hint="Enter topic/university/college name"
    android:drawableStart="@drawable/ic_baseline_search_24"
    />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/recyclehome"/>

</LinearLayout></ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>