<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mybutton"
    android:padding="5dp"
    android:gravity="center"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SecondActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <ImageView
        android:id="@+id/Notification_Image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_notifications"
        />
    <TextView
        android:id="@+id/TurnonN"
        style="@style/StyleforSecondAC"
        android:layout_below="@+id/Notification_Image"
        android:text="TURN ON NOTOFICATON?"
        android:textColor="@color/white"
        android:textSize="33sp"
        android:textStyle="bold|normal"

        />
    <TextView
        android:id="@+id/something"
        style="@style/StyleforSecondAC"
        android:layout_below="@+id/TurnonN"
        android:text="Enable Notification to receive notifications of notes "
        android:textSize="19sp"
        android:textColor="@color/white"

        />

    <Button
        android:id="@+id/notif_Button"
        style="@style/StyleforSecondAC"
        android:layout_gravity="bottom|center"
        android:background="@color/organe"
        android:text="OK"
        android:layout_marginTop="130dp"
        android:textColor="@color/black"
        android:textSize="20sp"

        />

</LinearLayout>
</ScrollView>