<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="SignUpViewModel"
            type="com.example.noteasap.ui.signUpViewModel.SignUpViewModel" />
    </data>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/signup"
    android:padding="20dp"
    android:background="@drawable/mybutton">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic__person"/>

    <EditText
        android:lines="1"
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:text="@{SignUpViewModel.fullname}"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="Full Name"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>

    <EditText
        android:lines="1"
        android:id="@+id/log_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{SignUpViewModel.email}"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>
    <EditText
        android:lines="1"
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@{SignUpViewModel.password}"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="Password"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"/>
    <EditText
        android:lines="1"
        android:id="@+id/con_pss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@{SignUpViewModel.conPassword}"
        android:padding="15dp"
        android:background="@drawable/shapeemail"
        android:drawablePadding="10dp"
        android:hint="Con-Password"
        android:inputType="textPassword"
        android:gravity="center"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textColorHighlight="@color/white"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"/>
         <CheckBox
        android:id="@+id/termsnCon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms and Condition"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:buttonTint="@color/white"
        android:checked="false"/>

    <Button
        android:id="@+id/reister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:shadowColor="@android:color/transparent"
        android:padding="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shapesignup"
        android:textColor="@color/white"/>
    <TextView
        android:id="@+id/already"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already Registered? click here"
        android:textColor="@color/white"
        android:clickable="true"
        android:padding="15dp"
        android:focusable="true" />


</LinearLayout></ScrollView>
</layout>